--- a/index.html
+++ b/index.html
@@ -1,4 +1,89 @@
----
+--- 
 layout: default
 title: Home Page
+custom_css: 
+- slick 
+- slick-theme
+custom_js: 
+- slick.min 
+- index 
 ---
+
+<div class="content">
+    <div class="hero-img">
+        <img src="http://visitiran.ir:443/static/tourismiran/images/azimi/1.jpg" alt="hero image">
+        <div class="hero-text">
+            <div class="top">از ایـران شگفـت انگیـز بازدیـد کنیـد !</div>
+            <div class="bottom">مجموعـه ای از هنـر، فرهنـگ، تـاریخ و طبیعـت بی نظیـر</div>
+        </div>
+    </div>
+    <div class="tripsearch">
+        <div class="title">مقصــدت را پیدا کن &nbsp;&nbsp;&nbsp;</div>
+        <div class="dropdowns">
+            <form action="">
+                <div class="selectbox">
+                    <select name="tripType" id="tripType">
+                        <option value="0">چه نو سفری؟</option>
+                    </select>
+                </div>
+                <div class="selectbox">
+                    <select name="weatherType" id="weatherType">
+                        <option value="0">چه نو آب و هوایی؟</option>
+                    </select>
+                </div>
+                <div class="selectbox">
+                    <select name="tripProvince" id="tripProvince">
+                        <option value="0">چه استانی؟</option>
+                        <option value="0">چه استانی؟</option>
+                        <option value="0">چه استانی؟</option>
+                        <option value="0">چه استانی؟</option>
+                    </select>
+                </div>
+                <div class="searchbutton">
+                    <button class="btn index">جستجو کن</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="destinations" >
+        <div class="title">مقاصــد گردشگری &nbsp;&nbsp;&nbsp;</div>
+        <div class="slider province" dir="ltr">
+            <div class="right shadow">
+                <div class="slider-nav">
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/3.jpg"  class="goto" data-slide="1" width="98%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/2.jpg"  class="goto" data-slide="2" width="98%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/12.jpg" class="goto" data-slide="3"  width="98%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/4.jpg"  class="goto" data-slide="4" width="98%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/5.jpg"  class="goto" data-slide="5" width="98%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/6.jpg"  class="goto" data-slide="6" width="98%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/7.jpg"  class="goto" data-slide="7" width="98%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/13.jpg" class="goto" data-slide="8"  width="98%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/9.jpg"  class="goto" data-slide="9" width="98%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/10.jpg" class="goto" data-slide="10"  width="98%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/11.jpg" class="goto" data-slide="11"  width="98%" height="100%"></div>
+                </div>   
+            </div>
+            <div class="left">
+                <div class="slider slider-for">                    
+                    <div class="image">
+                        <div class="name">
+                            <a href="#">تهران</a>
+                        </div>
+                        <img src="http://visitiran.ir:443/media/provinces/3.jpg" width="100%" height="100%">                        
+                    </div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/2.jpg" width="100%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/12.jpg" width="100%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/4.jpg" width="100%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/5.jpg" width="100%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/6.jpg" width="100%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/7.jpg" width="100%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/13.jpg" width="100%" height="100%"></div>                    
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/9.jpg" width="100%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/10.jpg" width="100%" height="100%"></div>
+                    <div class="image"><img src="http://visitiran.ir:443/media/provinces/11.jpg" width="100%" height="100%"></div>
+                </div>
+            </div>            
+        </div>
+
+    </div>
+</div>
