new vertical carousel

--- a/destinations.html
+++ b/destinations.html
@@ -6,11 +6,18 @@ custom_js:
 ---
 
 <div class="content destinations">
-    <div class="hero destinations">
+    <!-- <div class="hero destinations">
         <div class="hero-text">
             <a href="#">مقاصد گردشگری</a>
         </div>
-    </div>
+    </div> -->
+    <div class="hero-img">
+            <img src="http://visitiran.ir:443/static/tourismiran/images/azimi/1.jpg" alt="hero image">
+            <div class="hero-text">
+                <div class="top">مقاصد گردشگری</div>
+                <!-- <div class="bottom">مجموعـه ای از هنـر، فرهنـگ، تـاریخ و طبیعـت بی نظیـر</div> -->
+            </div>
+        </div>
     <div class="main">
         <div class="timeline-sidebar">
             <ul>
