--- a/index.html
+++ b/index.html
@@ -45,14 +45,34 @@ custom_js:
             </form>
         </div>
     </div>
-    <div class="terminus">
+    <!-- <div class="terminus">
         <div class="title">مقاصــد گردشگری &nbsp;&nbsp;&nbsp;</div>
-        <div class="slider province" dir="ltr">
-            <div class="right">
+        <div class="slider province" dir="ltr">           
+            <div class="right" style="position: relative;">
+                <div id="terminus-down" class="arrow down" style="text-align:center; vertical-align:middle">
+                    <div class="down">
+                        <div>
+                            <div>
+                                &#x3009;
+                            </div>
+                        </div>                         
+                    </div>               
+                    </div>
+                <div id="terminus-up" class="arrow up">                
+                    <div class="up">
+                        <div>
+                            <div>
+                                &#x3008;    
+                            </div>    
+                        </div>                         
+                    </div>
+                </div>
                 <div class="slider-nav">                  
                     <div class="image goto" data-slide="1">
-                        <!-- <h3>Shaahin</h3> -->
-                        <img src="http://visitiran.ir:443/media/provinces/3.jpg" width="98%" height="100%">
+                        <a href="#">
+                            <div class="name"> تهران</div>
+                            <img src="http://visitiran.ir:443/media/provinces/3.jpg" width="98%" height="100%">
+                        </a>
                     </div>
                     <div class="image goto" data-slide="2">
                         <img src="http://visitiran.ir:443/media/provinces/2.jpg" width="98%" height="100%">
@@ -127,6 +147,116 @@ custom_js:
                 </div>
             </div>
         </div>
+        <div class="bottom">
+            <a href="#" class="button-link">
+                تمام استانها
+            </a>
+        </div>
+    </div> -->
+    <div class="terminus">
+        <div class="title">
+            مقاصد گردشگری&nbsp;&nbsp;&nbsp;&nbsp;
+        </div>
+        <div id="terminus-scroll-up" class="arrow up">
+            <i class="fa fa-chevron-up"></i>
+        </div>
+        <div class="parent">
+            <div class="left">
+                <div class="image">
+                    <a href="#">
+                        <img src="http://visitiran.ir:443/media/provinces/12.jpg" width="98%" height="100%">
+                        <div class="name">
+                            شیراز
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div id="terminus-scrollable" class="right">
+                <div class="image">
+                    <a href="#">                        
+                        <img src="http://visitiran.ir:443/media/provinces/4.jpg" width="100%" height="100%">
+                        <div class="name">
+                            تهران
+                        </div>
+                    </a>
+                </div>
+                <div class="image">
+                    <a href="#">
+                        <div class="name">
+                            تهران
+                        </div>
+                        <img src="http://visitiran.ir:443/media/provinces/2.jpg" width="100%" height="100%">
+                    </a>
+                </div>
+                <div class="image">
+                    <a href="#">
+                        <div class="name">
+                            تهران
+                        </div>
+                        <img src="http://visitiran.ir:443/media/provinces/5.jpg" width="100%" height="100%">
+                    </a>
+                </div>
+                <div class="image">
+                    <a href="#">
+                        <div class="name">
+                            تهران
+                        </div>
+                        <img src="http://visitiran.ir:443/media/provinces/2.jpg" width="100%" height="100%">
+                    </a>
+                </div>
+                <div class="image">
+                    <a href="#">
+                        <div class="name">
+                            تهران
+                        </div>
+                        <img src="http://visitiran.ir:443/media/provinces/9.jpg" width="100%" height="100%">
+                    </a>
+                </div>
+                <div class="image">
+                    <a href="#">                        
+                        <img src="http://visitiran.ir:443/media/provinces/4.jpg" width="100%" height="100%">
+                        <div class="name">
+                            تهران
+                        </div>
+                    </a>
+                </div>
+                <div class="image">
+                    <a href="#">
+                        <div class="name">
+                            تهران
+                        </div>
+                        <img src="http://visitiran.ir:443/media/provinces/2.jpg" width="100%" height="100%">
+                    </a>
+                </div>
+                <div class="image">
+                    <a href="#">
+                        <div class="name">
+                            تهران
+                        </div>
+                        <img src="http://visitiran.ir:443/media/provinces/5.jpg" width="100%" height="100%">
+                    </a>
+                </div>
+                <div class="image">
+                    <a href="#">
+                        <div class="name">
+                            تهران
+                        </div>
+                        <img src="http://visitiran.ir:443/media/provinces/2.jpg" width="100%" height="100%">
+                    </a>
+                </div>
+                <div class="image">
+                    <a href="#">
+                        <div class="name">
+                            تهران
+                        </div>
+                        <img src="http://visitiran.ir:443/media/provinces/9.jpg" width="100%" height="100%">
+                    </a>
+                </div>  
+            </div>
+        </div>
+        <div id="terminus-scroll-down" class="arrow down">
+            <i class="fa fa-chevron-down"></i>            
+        </div>   
         <div class="bottom">
             <a href="#" class="button-link">
                 تمام استانها
@@ -569,6 +699,14 @@ custom_js:
                     </div>
                 </div>
             </div>
+
+            <!-- new -->
+                <div class="vertical-title">
+                    <div class="text">
+                        رویداد های گردشگری
+                    </div>
+                </div>
+            <!-- new -->
         </div>
         <div class="bottom">
             <a href="#" class="button-link">
