lots of bug fixes, synced with server

--- a/destinations.html
+++ b/destinations.html
@@ -21,27 +21,27 @@ custom_js:
     <div class="main">
         <div class="timeline-sidebar">
             <ul>
-                <li>
+                <li class="sidebar-link">
                     <p>
                         <a href="#world">اثار جهانی</a>
                     </p>
                 </li>
-                <li>
+                <li class="sidebar-link">
                     <p>
                         <a href="#">آثار تاریخی</a>
                     </p>
                 </li>
-                <li>
+                <li class="sidebar-link">
                     <p>
                         <a href="#">آثار طبیعی</a>
                     </p>
                 </li>
-                <li>
+                <li class="sidebar-link">
                     <p>
                         <a href="#">روستاهای هدف گردشگری</a>
                     </p>
                 </li>
-                <li>
+                <li class="sidebar-link">
                     <p>
                         <a href="#">مناطق آزاد</a>
                     </p>
