redid index.html, some minor changes on footer and header

--- a/destinations.html
+++ b/destinations.html
@@ -3,6 +3,7 @@ layout: default
 title: استانها
 custom_js: 
 - timeline
+- base
 ---
 
 <div class="content destinations">
@@ -12,7 +13,7 @@ custom_js:
         </div>
     </div> -->
     <div class="hero-img">
-            <img src="http://visitiran.ir:443/static/tourismiran/images/azimi/1.jpg" alt="hero image">
+            <img src="http://visitiran.ir/static/tourismiran/images/azimi/1.jpg" alt="hero image">
             <div class="hero-text">
                 <div class="top">مقاصد گردشگری</div>
                 <!-- <div class="bottom">مجموعـه ای از هنـر، فرهنـگ، تـاریخ و طبیعـت بی نظیـر</div> -->
