--- a/password-reset-done.html
+++ b/password-reset-done.html
@@ -1,12 +1,14 @@
 --- 
 layout: default 
 title: password reset
+custom_js: 
+- base
 ---
 <div class="content">
     <div class="center-wrapper">
         <div class="form bordered">
             <div class="right">
-                <img src="{{site.baseurl}}/assets/images/logo-f.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/logo-fa.jpg" alt="">
             </div>
             <div class="left">
                 <div class="row link">
