--- a/password-reset.html
+++ b/password-reset.html
@@ -1,12 +1,14 @@
 --- 
 layout: default 
 title: password reset 
+custom_js: 
+- base
 ---
 <div class="content">
     <div class="center-wrapper">
         <form class="form">
             <div class="logo">
-                <img src="{{site.baseurl}}/assets/images/logo-f.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/logo-fa.jpg" alt="">
             </div>
             <div class="row">
                 <label for="email">آدرس ایمیل</label>
