some more minor fixes

--- a/new-index.html
+++ b/new-index.html
@@ -494,7 +494,7 @@ custom_js:
                 </div>
                 <div class="left">
                     <div class="title">
-                        رویدادها
+                        رویدادها گردشگری
                     </div>
                 </div>
             </div>
