404 page, new hero slider, lots of changes

--- a/new-province.html
+++ b/new-province.html
@@ -10,12 +10,26 @@ custom_js:
 - base
 ---
 <div class="content">
-    <div class="hero-img">
+    <!-- <div class="hero-img">
         <img src="http://visitiran.ir/media/tourismiran_pics/qarbi2_6VuuhaO.jpg" alt="hero image">
         <div class="hero-text left">
             <div class="top">از ایـران شگفـت انگیـز بازدیـد کنیـد !</div>
         </div>
-    </div>
+    </div> -->
+    <section id="hero-slider" dir="ltr">
+        <div class="hero-img">
+            <img src="http://visitiran.ir/static/tourismiran/images/azimi/1.jpg" alt="hero image">
+            <div class="hero-text left">
+                <div class="top">از ایـران شگفـت انگیـز بازدیـد کنیـد !</div>
+            </div>
+        </div>
+        <div class="hero-img">
+            <img src="http://visitiran.ir/static/tourismiran/images/azimi/2.jpg" alt="hero image">
+            <div class="hero-text left">
+                <div class="top">از ایـران شگفـت انگیـز بازدیـد کنیـد !</div>
+            </div>
+        </div>
+    </section>
     <div class="history dark">
         <div class="top">
             <div class="right">
