--- a/login-api.html
+++ b/login-api.html
@@ -44,7 +44,7 @@ custom_js:
             </div>                      
             <div class="row">
                 <input class="input" type="hidden" id="entered_email" name="email">
-                <input class="input" type="number" id="code" name="code" placeholder="کد ارسال شده به ایمیل را وارد کنید">
+                <input class="input" type="number" maxlength="10" size="10" id="code" name="code" placeholder="کد ارسال شده به ایمیل را وارد کنید">
             </div>
                             
             <div class="row">
