--- a/api-create-places.html
+++ b/api-create-places.html
@@ -54,6 +54,7 @@ custom_js:
                     <span>برای آپلود عکس، اینجا را کلیک نمایید</span>
                 </div>
             </div>
+            <div class="dropzone-previews preview-container"></div>
         </form>
         <div class="submitrow">
             <button id="submit-all" class="btn full-width">ذخیره</button>
