--- a/login-api.html
+++ b/login-api.html
@@ -46,13 +46,13 @@ custom_js:
                 <label id="lblEmail" for=""></label>
             </div>                      
             <div class="row">
-                <input class="input" type="hidden" id="entered_email" name="email">
-                <input class="input" type="number" maxlength="10" size="10" id="code" name="code" placeholder="کد ارسال شده به ایمیل را وارد کنید">
+                <input class="input" type="hidden" id="entered_email" name="username">
+                <input class="input" type="number" maxlength="10" size="10" id="password" name="password" placeholder="کد ارسال شده به ایمیل را وارد کنید">
             </div>
                             
             <div class="row">
                 <button type="submit" id="btnVerify" class="btn full-width">بررسی و ورود</button>                
-                <input type="hidden" name="next" value="" />
+                <!-- <input type="hidden" name="next" value="" /> -->
             </div>   
             <div class="row">
                 <button type="button" id="btnPrevForm" class="btn full-width white">تصحیح ایمیل</button>                
