--- a/new-index.html
+++ b/new-index.html
@@ -507,4 +507,22 @@ custom_js:
             </div>
         </div>
     </section>
+    <section class="upload-image-ad">
+        <div class="upload-image-ad-container">
+            <div class="text">
+                <div class="title">
+                    برای ویزیت ایران عکس بفرستید
+                </div>
+                <div class="sub-title">
+                    نمایش عکسها با ذکر نام عکاس
+                </div>
+                <div class="button">
+                    <a href="#" class="button-link full-width">ورود به صفحه ی برگزاری عکس</a>
+                </div>
+            </div>
+            <div class="image">            
+                <img src="{{site.baseurl}}/assets/images/uploadimagead.jpg" alt="">    
+            </div>
+        </div>
+    </section>
 </div>
