--- a/new-province.html
+++ b/new-province.html
@@ -27,12 +27,14 @@ custom_js:
             <img src="http://visitiran.ir/static/tourismiran/images/azimi/1.jpg" alt="hero image">
             <div class="hero-text left">
                 <div class="top">از ایـران شگفـت انگیـز بازدیـد کنیـد !</div>
+                <div class="bottom">مجموعـه ای از هنـر، فرهنـگ، تـاریخ و طبیعـت بی نظیـر</div>                
             </div>
         </div>
         <div class="hero-img">
             <img src="http://visitiran.ir/static/tourismiran/images/azimi/2.jpg" alt="hero image">
             <div class="hero-text left">
                 <div class="top">از ایـران شگفـت انگیـز بازدیـد کنیـد !</div>
+                <div class="bottom">مجموعـه ای از هنـر، فرهنـگ، تـاریخ و طبیعـت بی نظیـر</div>
             </div>
         </div>
     </section>
