--- a/new-province.html
+++ b/new-province.html
@@ -547,6 +547,7 @@ custom_js:
                             امتیاز دهید
                         </div>
                         <select id="rater">
+                            <!-- <option class="hidden" value="0">0</option> -->
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
